# JFP_DP

./: .gitignore  .gitmodules  README.md  requirements.txt
assets/aircraft/quad/: SensorBaro_quad.xml  SensorImu_quad.xml  property_catalog.txt  quad.xml  quad_ground.xml  quad_init_001.xml  quad_mass.xml  quad_metrics.xml  quad_propulsion.xml  quad_propulsion_system.xml
assets/aircraft/quad/output_def/: quad_out_def.xml  quad_out_def_custom.xml  quad_out_def_jsbsim.xml
assets/aircraft/rocket/: rocket.xml  rocket_init_001.xml  rocket_viz.xml
assets/engine/: Dalprop_5146.xml  EMAX_ECOII_2306_1700.xml  Estes_E9_mine.xml  Estes_E9_nozzle.xml  Quad_prop.xml  Simple_quad_engine.xml
assets/output_directives/: flightgear.xml  position.xml  sitl_testing.xml
assets/script/: quad_script_001.xml  rocket_script_001.xml
assets/script/rocket/: rocket_script_001.xml
autotune/: autotune.py  plot_tune_3d.py  plot_tune_stacked.py
autotune/configs/: quad_tune_000_initial_angle.xml  quad_tune_00_angle.xml  quad_tune_00_initial_angle.xml  quad_tune_01_angle.xml  quad_tune_01_pos.xml  quad_tune_02_alt.xml  quad_tune_02_initial_alt.xml  quad_tune_03_angle.xml  quad_tune_03_yaw_sp.xml  quad_tune_04_yaw_rate.xml  quad_tune_04_yaw_sp.xml  quad_tune_05_alt_rate.xml  quad_tune_05_pos.xml  quad_tune_99_all.xml
fcs/: CMakeLists.txt  Makefile  Makefile.cubemx  Makefile.custom  README.md  debug.cfg  fcs.cpp  imu.h  pid.h
fcs/docs/: doxygen_config
fcs/lib/: CMakeLists.txt
fcs/lib/madgwick_algorithm_c/: CMakeLists.txt  MadgwickAHRS.cpp  MadgwickAHRS.h
fcs/src/: Adafruit_AHRS_FusionInterface.h  Adafruit_AHRS_Madgwick.cpp  Adafruit_AHRS_Madgwick.h  Adafruit_AHRS_NXPFusion.cpp  Adafruit_AHRS_NXPFusion.h  CMakeLists.txt  MadgwickAHRS.cpp  MadgwickAHRS.h  complementary_filter.cpp  complementary_filter.h  config.h  constants.h  defines.h  delay_us.c  delay_us.h  demo_sequence.cpp  demo_sequence.h  fcs.cpp  flash_interface.cpp  flash_interface.h  flash_logging.cpp  flash_logging.h  flight_events.cpp  flight_events.h  global_variables.h  j_packet_recv_callback.cpp  j_packet_recv_callback.h  j_packet_send_callback.cpp  j_packet_send_callback.h  low_pass_filter.cpp  low_pass_filter.h  main.cpp  main.h  mixer.cpp  mixer.h  pid.cpp  pid.h  pressure.h  quaternion.h  sitl_data_interface.cpp  (+9 more)
fcs/src/archive/: Adafruit_AHRS_NXPFusion.h  MadgwickAHRS.cpp
fcs/src/drivers/: bmi160.cpp  bmi160.h  hp203b.cpp  hp203b.h  w25qxx.c  w25qxx.h  w25qxxConf.h
fcs/src/hal/st/: config.c  gpio.c  main.h  stm32l1xx_hal_conf.h  stm32xxxx.h  stm32xxxx_hal.h  stm32xxxx_hal_i2c.h  stm32xxxx_hal_spi.h  tim.c  tim.h  usart.c  usart.h
fcs/src/hal/st/stm32f4/: adc.c  config.c  gpio.c  main.h  spi.c  tim.c  tim.h  usart.c
fcs/src/hal/st/stm32f4/core/: stm32f4xx_hal_conf.h  stm32f4xx_it.c  stm32f4xx_it.h
fcs/src/hal/st/stm32f4/stm32f405/gcc/: STM32F405RGTx_FLASH.ld
fcs/src/hal/st/stm32l1/: main.h  tim.h  usart.c
fcs/src/hal/st/stm32l1/core/: stm32l1xx_hal_conf.h  stm32l1xx_hal_msp.c  stm32l1xx_it.c  stm32l1xx_it.h
fcs/src/hal/st/stm32l1xx/core/: stm32l1xx_hal_conf.h
fcs/src/usb/: usbd_cdc.c  usbd_cdc.h  usbd_cdc_if.c  usbd_cdc_if.cpp  usbd_conf.c
fcs/src/usb/stm32f4/: usbd_cdc_if.c
fcs/src/usb/stm32l1/: usbd_cdc.h
fdm/: CMakeLists.txt  README.md
fdm/cmake/: functions.cmake
fdm/docs/: README.md  doxygen_config
fdm/lib/: CMakeLists.txt  download-dependencies.sh
fdm/src/: CMakeLists.txt  command_interface.cpp  command_interface.h  constants.h  fcs_interface.cpp  fcs_interface.h  hitl_interface.cpp  hitl_interface.h  i_sim_client.h  jsbsim_interface.cpp  jsbsim_interface.h  main.cpp  realtime_loop.cpp  realtime_loop.h  serial_interface.cpp  serial_interface.h  sim_config.h  sim_events.cpp  sim_events.h  sitl_interface.cpp  sitl_interface.h  state_logger.cpp  state_logger.h  timer.cpp  timer.h  ws_server.cpp  ws_server.h
graph-viz/analysis/: rms-noise.py
graph-viz/grafana/: Dockerfile  README.md  grafana.ini
graph-viz/j-viz/: README.md  j-viz.py  quad-config.xml  quad_config.xml  quad_config_jsbsim.xml  quad_config_telem.xml  requirements.txt
graph-viz/j-viz/configs/: quad_config.xml  quad_config_telem.xml
j-viz/: README.md  j-viz.py
j-viz/configs/: quad_config.xml  quad_config_telem.xml
shared/: j_packets.cpp  j_packets.h
utils/: j_packets.cpp  j_packets.h
utils/analysis/: accelerometer_fft.py  ang_acc_corelation.py  fft_low_pass_filter.py  lpf.py  partial_timeseries_plot.py  variance_analysis.py
visualizer/: README.md  forge.config.ts  package-lock.json  package-ubuntu.json  package.json  tsconfig.json  webpack.config.js  webpack.main.config.ts  webpack.plugins.ts  webpack.renderer.config.ts  webpack.rules.ts
visualizer/public/: index.html
visualizer/public/styles/: main.css
visualizer/src/: index.html  index.ts  preload.ts  renderer.ts
visualizer/src/app/: app.ts  constants.ts  craft.ts  craftEntity.ts  entity.ts  originCamera.ts  utils.ts
visualizer/src/js/: app.ts  constants.ts  craft.ts  craftEntity.ts  originCamera.ts  utils.ts
